fix overscroll on mobile

--- a/node/src/app.scss
+++ b/node/src/app.scss
@@ -765,3 +765,9 @@ body, html {
     display:inline;
   }
 }
+
+body.no-scroll {
+  width:100vw;
+  height:100vh;
+  overflow:hidden;
+}
